# zipfile-inflate64

./: .azure-pipelines.yml  .flake8  .gitattributes  .gitignore  .woodpecker.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
docs/: changes.rst  conf.py  howtouse.rst  index.rst
src/zipfile_inflate64/: __init__.py  _zipfile.py
tests/: test_deflate64.py  test_zipfile.py
zipfile_inflate64/: __init__.py  _zipfile.py
